# 5g-handover-optimization

./: readme.md
power-model/: .gitignore  build.py  license.md  pyproject.toml
power-model/ue_power_model_5g/: __init__.py  drx.py  traffic_pattern.py
power-model/ue_power_model_5g/sleep_ratio/: Simulation.cpp  Simulation.pxd  simulation.py  simulation_python.py
presentation/: justfile  slides.typ
presentation/figures/: connection-sequence.typ  drx.typ  evaluation-table.typ  gym-interface.typ  handover-power-plot.typ  handover-power.typ  log-utility.typ  measurement-ue.typ  power-model-approaches.typ  rl-loop.typ  sa-nsa.typ  sleep-ratio-pps.typ  spectrum-usage.typ  traffic-power-pps.typ  utils.typ
scripts/: .gitignore  pyproject.toml
scripts/scripts/: utils.py
scripts/scripts/measurements/: current_recorder.py  evaluate.py  measure.py  plot.py  qmi.py  readme.md  scenarios.py  traffic_generator.py
scripts/scripts/power_model/: compute_power.py  plot_dirichlet_monte_carlo.py  plot_model.py  sum_handover_power.py  sum_traffic_power.py
scripts/scripts/sleep_ratio/: constants.py  estimate.py  plot_activity.py  plot_activity_probabilities.py  plot_sleep_ratio.py  time_estimation.py
simulation/: .gitignore  pyproject.toml
simulation/simulator/: agents.py  environments.py  metrics.py  utils.py
simulation/simulator/environment/: issues.md  license.md  scenarios.py
simulation/simulator/environment/core/: base_station.py  channels.py  connection.py  default_constants.py  environment.py  metrics.py  monitor.py  movement.py  position.py  schedulers.py  user_equipment.py  util.py  visualizer.py
simulation/simulator/scripts/: apply.py  evaluate.py  optimize_hyperparameters.py  random.py  render.py  train.py
simulation/simulator/simulation_models/: applications.py  schedulers.py  ues.py
thesis/: cetz.typ  glossary.typ  ieee_custom.csl  justfile  literature.bib  main.typ  utils.typ
(+100 files in other folders)
